# gachaplus-rust-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  checks.bat  sqlx_update.bat
.github/: dependabot.yml
.github/workflows/: docker-image.yml  rust.yml
.sqlx/: query-0552dd53a7fbb2ee156b5253d39b684523257cd44b2560a136776ff87a40dd17.json  query-35a312870314f2cbd252dc2e3fe6daf82fc672ea2c2950fb8366b65a26ee9692.json  query-4a2dcaa8acd28c407ae3ed8f30471bd20fcc2795cd70b6eeb09584f8fe3a059b.json  query-5732987e6c7faacdb3a115eedd6b7f841dd51b3dd4c14bd50057c979a40b83ed.json  query-91e64c27b3098174fe4d327361e6d640161d0b13b2fd27235ac95f6b7724c61e.json  query-a13b54cb337df43987f542321f52d614c9c9306b10ea06cf5f1623d2c86656d6.json  query-a47cc6bae06558ea750fb07d1a0efb323f3b45e82524507affb0e403b3ce7d4f.json  query-e37cc3423ef9a0146a050d6e8b3a10161f1353bcb58fd5fd2b84dbba8562a7a9.json  query-e64ecde83932fdf64938154a8bcd121f1dbc383ae80bbcf94baf0136254c53e4.json  query-f37eccc7400db00c39c9c1d103f9dd5f3ac6f91054c4f0e857be36482e88e773.json  query-f85ce6a36880c7de45e8785e754e78361fc4707896d9dabf6d19198ab2191d56.json
database/: gacha-plus-database.sql
files/: style.css
src/: background_jobs.rs  character_code.rs  enviorment.rs  gachaplus_database.rs  http_handler.rs  main.rs  tests.rs
src/background_jobs/: clear_ratelimit_cache.rs  random_character_cache.rs  write_out_log.rs
src/gachaplus_database/: free_oc_table.rs  latestversion_table.rs  oc_table.rs  short_log_table.rs  startup_log_table.rs  tranfer_datas_table.rs
src/http_handler/: handlers.rs  ip_manager.rs  middlewares.rs  response_manager.rs
src/http_handler/handlers/: character.rs  hello_world.rs  random_character.rs  startup.rs  stat.rs  transfer_datas.rs  version.rs
src/http_handler/middlewares/: answer_200.rs  fake_request.rs  log.rs  logdb.rs  ratelimit.rs
