[package]
name = "gachaplus_rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = {version = "0.7", features = ["mysql", "chrono", "json", "runtime-tokio"]}
reqwest = {version = "0.11",  features=["rustls-tls"], default-features = false }
dotenv = "0.15"
inline_colorization = "0.1"
chrono = {version = "0.4", features = ["serde"] }
rand = "0.8"
url = "2.4"
md-5 = "0.10"
# tower = { version = "0.4", features = ["limit", "buffer"]}# ["util", "filter"] }
tower = { version = "0.4", features = ["util"]}
tower-http = { version = "0.5", features = ["fs", "trace"]}
# http-body = "1.0"
hyper = { version = "1.0", features = ["full"] }
sysinfo = "0.29"
memory-stats = "1.1"
build_html = "2.4"
thousands = "0.2"
http-body-util = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"