[package]
name = "gachaplus_rust_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Web
axum = {version = "0.7", features = ["macros", "tokio"] }
tower = { version = "0.4", features = ["util"]} # ["limit", "buffer", "util", "filter"]
tower-http = { version = "0.5", features = ["fs", "trace"]}
http-body-util = "0.1"
build_html = "2.4"
url = "2.4"
# -- Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# -- Database
sqlx = {version = "0.8", features = ["mysql", "chrono", "json", "runtime-tokio"]}
# -- Async
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
# -- System info
sysinfo = "0.30"
memory-stats = "1.1"
# -- Visualize
chrono = {version = "0.4", features = ["serde"] }
inline_colorization = "0.1"
thousands = "0.2"
# -- Other
dotenv = "0.15"
rand = "0.8"
md-5 = "0.10" 

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"


[dev-dependencies]
# -- Making test requests
reqwest = {version = "0.12",  features=["rustls-tls"], default-features = false }